# snakeframe

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  NOTICE.md  README.md  conda-lock.yml  cookiecutter.json  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  docs.yml  linter.yml  tests.yml
docs/: .nav.yml  conf.py  gen_ref_pages.py  index.md  jupyter-notebooks.ipynb  makefile.md  setup.md
docs/bp/api/: index.md
docs/bp/config/: index.md
docs/bp/errors/: index.md
docs/bp/pandp/: index.md
docs/bp/patterns/: index.md
docs/bp/patterns/adapter/: index.md
docs/bp/patterns/command/: index.md
docs/bp/patterns/decorator/: index.md
docs/bp/patterns/factory/: index.md
docs/bp/patterns/observer/: index.md
docs/bp/patterns/pipeline/: index.md
docs/bp/patterns/singleton/: index.md
docs/bp/patterns/strategy/: index.md
docs/bp/perf/: index.md
docs/bp/principles/: index.md
docs/bp/principles/dry/: index.md
docs/bp/principles/kiss/: index.md
docs/bp/principles/opt/: index.md
docs/bp/principles/soc/: index.md
docs/bp/principles/solid/: index.md
docs/bp/principles/yagni/: index.md
docs/bp/security/: index.md
docs/bp/structure/: index.md
docs/bp/structure/hierarchy/: index.md
docs/bp/structure/organization/: index.md
docs/get-started/: .nav.yml  index.md
docs/get-started/anatomy/: index.md
docs/get-started/anatomy/aux/: index.md
docs/get-started/anatomy/docs/: index.md
docs/get-started/anatomy/root/: index.md
docs/get-started/anatomy/source/: index.md
docs/get-started/anatomy/tests/: index.md
docs/get-started/creating/: index.md
docs/get-started/env/: index.md
docs/manage/cicd/: index.md
docs/manage/collab/: index.md
docs/manage/versioning/: index.md
docs/source/: conf.py  index.md  setup.md
docs/usability/docs/: index.md
docs/usability/package/: index.md
docs/usability/package/metadata/: index.md
docs/usability/package/pub/: index.md
docs/workflow/debug/: index.md
docs/workflow/standards/: index.md
docs/workflow/testing/: index.md
docs/workflow/version/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
snakeframe/: __init__.py
tests/: test_bake.py  test_utils.py
{{ cookiecutter.project_name }}/: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .pytest.ini  CODE_OF_CONDUCT.md  Makefile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
{{ cookiecutter.project_name }}/.github/: dependabot.yml
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug_report.md  question.md
{{ cookiecutter.project_name }}/.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  docs.yml  linter.yml  pages.yml  release-drafter.yml  tests.yml
{{ cookiecutter.project_name }}/_licenses/: apache.md  bsd3.md  gpl3.md  mit.md
{{ cookiecutter.project_name }}/docs/: .nav.yml  conf.py  development.md  gen_ref_pages.py  index.md  jupyter-notebooks.ipynb
{{ cookiecutter.project_name }}/docs/.overrides/: main.html
{{ cookiecutter.project_name }}/docs/_static/: index.js
{{ cookiecutter.project_name }}/docs/_templates/: base.html  page.html  versions.html
{{ cookiecutter.project_name }}/docs/_templates/launcher/: buttons.html  launch-this.html
{{ cookiecutter.project_name }}/docs/css/: colors.css
{{ cookiecutter.project_name }}/docs/overrides/: main.html
{{ cookiecutter.project_name }}/docs/source/: conf.py  index.md  poetry.md
{{ cookiecutter.project_name }}/tests/: conftest.py
{{ cookiecutter.project_name }}/tests/test_example/: test_hello.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py
