[tool.poetry]
name = "snakeframe"
version = "0.0.0"
description = "A cookiecutter template for accessible, reproducible Python packages"
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cookiecutter = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pylint = "^2.17.5"
bandit = "^1.7.5"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"
poetry-dynamic-versioning = "^1.1.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-html = "^4.0.1"
colorama = "^0.4.6"
coverage-badge = "^1.1.0"
pytest-order = "^1.1.0"
coverage = "^7.3.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-multiversion = "^0.2.4"
furo = "^2023.9.10"
sphinx-design = "^0.5.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinxemoji = "^0.2.0"
sphinx-autoapi = "^2.1.1"
sphinx-autodoc-typehints = "^1.24.0"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"
pydocstyle = "^6.3.0"
sphinx-togglebutton = "^0.3.2"
sphinxcontrib-bibtex = "^2.6.1"
folium = "^0.14.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"

[tool.poetry.group.docs.dependencies.myst-nb]
git = "https://github.com/executablebooks/MyST-NB"
rev = "8428815cda8af7937993241eaa6fa76eb1635497"

[tool.bumpversion]
current_version = "0.1.1"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
no_regex = false
search = "\\[Unreleased\\]"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.pylint.messages_control]
good-names = [
    "i",
    "j",
    "e",
    "ex",
]
ignore = [
    "CVS",
    "_version.py",
    "conf.py",
]

[tool.black]
target-version = [
    "py311",
]
line-length = 88
color = true
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n    | env\n    | venv\n)/\n"

[tool.isort]
py_version = 311
line_length = 88
known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = 3.11
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
norecursedirs = [
    "{{ cookiecutter.project_name }}",
    "hooks",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
appdirs = "^1.4.4"
Brotli = "^1.1.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachy = "^0.3.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
cfgv = "^3.3.1"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.4.2"
conda_poetry_liaison = "^0.1.2"
crashtest = "^0.4.1"
cryptography = "^41.0.5"
distlib = "^0.3.7"
dulwich = "^0.21.6"
ensureconda = "^1.4.3"
fastjsonschema = "^2.18.1"
filelock = "^3.13.1"
gitdb = "^4.0.11"
GitPython = "^3.1.40"
html5lib = "^1.1"
identify = "^2.5.31"
idna = "^3.4"
importlib-metadata = "^6.8.0"
installer = "^0.7.0"
"jaraco.classes" = "^3.3.0"
jeepney = "^0.8.0"
Jinja2 = "^3.1.2"
keyring = "^24.2.0"
MarkupSafe = "^2.1.3"
more-itertools = "^10.1.0"
msgpack = "^1.0.6"
nodeenv = "^1.8.0"
numpy = "^1.26.0"
packaging = "^23.2"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pip = "^23.3.1"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.0"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.5.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.4.2"
pydantic_core = "^2.10.1"
pylev = "^1.4.0"
pyproject_hooks = "^1.0.0"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.18.5"
"ruamel.yaml.clib" = "^0.2.7"
SecretStorage = "^3.3.3"
setuptools = "^68.2.2"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^5.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.2"
toolz = "^0.12.0"
trove-classifiers = "^2023.11.9"
typing_extensions = "^4.8.0"
ukkonen = "^1.0.1"
urllib3 = "^1.26.18"
virtualenv = "^20.24.6"
webencodings = "^0.5.1"
wheel = "^0.41.3"
zipp = "^3.17.0"
