[project]
authors = [
    {name = "{{ cookiecutter.organization }}", email = "{{ cookiecutter.email }}"}
]
description = "{{ cookiecutter.project_description }}"
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.project_name }}*"]
